# Dia

./: .gitignore  CMakeLists.txt  Dia.sln  Dia.vcxproj  Makefile  README.md  README.txt  defaults  defaults.txt
VS Project/: ConsoleApplication1.sln
VS Project/ConsoleApplication1/: AppInfo.hpp  CommandLine.hpp  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  Defaults.hpp  Drawer.cpp  EditMode.hpp  Elements.hpp  History.hpp  Selection.hpp  SetParser.cpp  TextEdit.cpp  TextEdit.hpp  main.cpp  utils.hpp
VS Project/ConsoleApplication1/x64/Debug/: vc142.idb
VS Project/ConsoleApplication1/x64/Release/: ConsoleApplication1.exe.recipe  ConsoleApplication1.iobj  ConsoleApplication1.ipdb
src/: AppInfo.hpp  CommandLine.cpp  CommandLine.hpp  CreateMode.cpp  CreateMode.hpp  Defaults.cpp  Defaults.hpp  DeleteMode.cpp  DeleteMode.hpp  Drawer.cpp  Drawer.hpp  EditMode.cpp  EditMode.hpp  Elements.hpp  History.hpp  LoadSave.cpp  LoadSave.hpp  Selection.cpp  Selection.hpp  SetParser.cpp  SetParser.hpp  TextEdit.hpp  main.cpp  utils.cpp  utils.hpp
x64/Debug/: Dia.exe.recipe  Dia.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Debug/Dia.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Dia.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Release/: Dia.exe.recipe  Dia.iobj  Dia.ipdb  Dia.vcxproj.FileListAbsolute.txt
x64/Release/Dia.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Dia.lastbuildstate  Dia.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
(+11 files in other folders)
